# Andor_idus420_Demodulation_gui

./: .gitignore  PRODUCT.md  README.md  SNOM_fucnt.md  launch_gui.vbs  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-30-camera-shutter-regression.md  2026-07-16-redpitaya-andor-state-sync.md
docs/superpowers/specs/: 2026-06-30-camera-shutter-regression-design.md  2026-07-13-scan-metadata-time-fft-design.md  2026-07-17-safe-gui-updates-design.md
notebooks/: snom_connection_test.ipynb  snom_scan.ipynb
src/idus420_gui/: __init__.py  __main__.py
src/idus420_gui/camera/: __init__.py  andor.py  base.py  mock.py
src/idus420_gui/gui/: __init__.py  _helpers.py  main_window.py  panel_acquire.py  panel_camera.py  panel_demod.py  panel_live.py  panel_scan.py  panel_spectrograph.py  theme.py  widgets.py
src/idus420_gui/io/: __init__.py  powermeter.py  rp_state.py  save.py
src/idus420_gui/motion/: __init__.py  base.py  mock.py  nea_snom.py
src/idus420_gui/processing/: __init__.py  demodulation.py  roi.py
src/idus420_gui/spectrograph/: __init__.py  andor.py  andor_shamrock.py  base.py  mock.py
src/idus420_gui/workers/: __init__.py  _frame_io.py  acquisition.py  scan.py
tests/: test_acquire_rp_snapshot.py  test_andor_backend.py  test_app_icon.py  test_camera_labels.py  test_camera_panel.py  test_channel_reduction.py  test_demod_plot.py  test_demodulation.py  test_frame_io.py  test_git_update.py  test_helpers.py  test_live_panel.py  test_mock_backend.py  test_mock_stage.py  test_powermeter.py  test_roi.py  test_rp_state.py  test_rp_sync.py  test_save.py  test_scan_panel.py  test_scan_worker.py  test_spectrograph_backend.py  test_spectrograph_panel.py  test_worker_smoke.py
