[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idus420-gui"
version = "0.1.0"
description = "Desktop acquisition and demodulation GUI for Andor iDus 420 cameras."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Edoardo Lab" }]
license = { text = "MIT" }
dependencies = [
  "PyQt6>=6.6,<7",
  "pyqtgraph>=0.13,<0.14",
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "h5py>=3.9,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-qt>=4.2,<5",
  "ruff>=0.4,<1",
  "mypy>=1.8,<2",
]
andor = []
snom = [
  "nea_tools",
  "nest_asyncio>=1.6,<2",
]
spectrograph = []  # pyAndorSpectrograph ships with the Andor SDK; not on PyPI
powermeter = [
  "pyvisa>=1.13,<2",
  "pyvisa-py>=0.7,<1",   # pure-python VISA backend, no NI-VISA needed
  "ThorlabsPM100>=1.2,<2",
]

[project.scripts]
idus420-gui = "idus420_gui.__main__:main"

[project.gui-scripts]
idus420-gui-w = "idus420_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# Type checking is gated on the non-Qt core (processing/camera/workers/io/motion),
# where annotations are complete and worth enforcing.  The Qt GUI layer is
# excluded for now: PyQt6's pervasive `Widget | None` getters generate noise that
# would need broad suppression rather than real bug fixes.
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = [
  "src/idus420_gui/processing",
  "src/idus420_gui/camera",
  "src/idus420_gui/workers",
  "src/idus420_gui/io",
  "src/idus420_gui/motion",
]
